<resources>
    <string name="detail_name">Name</string>
    <string name="detail_tags">Tags</string>
    <string name="detail_country">Country</string>
    <string name="detail_language">Language</string>
    <string name="detail_weblink">Weblink</string>
    <string name="detail_play">Play</string>
    <string name="detail_pause">Pause</string>
    <string name="detail_stop">Stop</string>
    <string name="detail_share">Share</string>
    <string name="action_local">Local</string>
    <string name="action_pause">Pause</string>
    <string name="action_resume">Resume</string>
    <string name="action_stop">Stop</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_history">Delete history</string>
    <string name="action_delete_favorites">Delete favorites</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_top_click">TopClick</string>
    <string name="action_top_vote">TopVote</string>
    <string name="action_changed_lately">Changed lately</string>
    <string name="action_currently_playing">Playing</string>
    <string name="action_tags">Tags</string>
    <string name="action_countries">Countries</string>
    <string name="action_languages">Languages</string>
    <string name="error_station_load">Could not connect to station</string>
    <string name="error_list_update">Could not connect to radio browser server</string>
    <string name="share_action">Share station link with..</string>
    <string name="nav_item_stations">Stations</string>
    <string name="nav_item_starred">Starred</string>
    <string name="nav_item_history">History</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_alarm">Alarm</string>
    <string name="nav_item_recordings">Recordings</string>
    <string name="about_text">This app uses the free radio station directory at\nhttps://www.radio-browser.info\nEveryone can add stations to it or edit existing stations. It works like a wiki for online(streaming) radio stations.\n\nContact:\nsegler_alex@web.de\n\nBugtracker:\nhttps://github.com/segler-alex/RadioDroid/issues\n\nIf you like this software and want to help, feel free to send me an email. I really need someone with graphical experience to make the app nicer to the eye :) Maybe someone who can draw for icons, images...But also programmers who fix bugs, or implement new ones (features not bugs ;)\nAlso ideas for new features are always appreciated!\n\nThis app is free software licensed under the GPLv3\nhttps://www.gnu.org/licenses/gpl-3.0.html.</string>
    <string name="about_version">Version: %1$s</string>
    <string name="detail_star">Bookmark as favorite</string>
    <string name="detail_unstar">Delete as favorite</string>
    <string name="progress_loading">Loading...</string>
    <string name="sleep_timer" formatted="true">Sleep timer: %1$02d:%2$02d</string>
    <string name="sleep_timer_title">How many minutes before stop?</string>
    <string name="sleep_timer_apply">Apply</string>
    <string name="sleep_timer_clear">Clear</string>
    <string name="nav_item_add_sleep">+15 mins</string>
    <string name="settings_interface">UI</string>
    <string name="settings_theme_selection_title">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="settings_circular_icons">Use circular icons</string>
    <string name="settings_compact_style">Compact mode</string>
    <string name="settings_bottom_navigation">Bottom navigation</string>
    <string name="settings_general">General</string>
    <string name="settings_single_use_tags">Show single use tags</string>
    <string name="settings_single_use_tags_desc_off">Single use tags will not be shown</string>
    <string name="settings_single_use_tags_desc_on">Single use tags will be shown</string>
    <string name="settings_show_broken">Broken stations</string>
    <string name="settings_show_broken_on">Show broken stations in lists</string>
    <string name="settings_show_broken_off">Do not show broken stations in lists</string>
    <string name="startup_action_title">Start action</string>
    <string name="startup_action_title_desc">%s</string>
    <string name="startup_show_all_stations">Show all stations</string>
    <string name="startup_show_favorites">Show favorites</string>
    <string name="startup_show_history">Show history</string>
    <string name="startup_show_last_view">Last view</string>
    <string name="settings_load_icons">Show station icons</string>
    <string name="settings_load_icons_on">Icons will be downloaded</string>
    <string name="settings_load_icons_off">Icons will not be downloaded</string>
    <string name="settings_auto_favorite">Auto-favorites</string>
    <string name="settings_auto_favorite_on">Set stations automatically as favorites when playing</string>
    <string name="settings_auto_favorite_off">Do not set stations automatically as favorites when playing</string>
    <string name="settings_icon_click_toggles_favorite">Icon clicks</string>
    <string name="settings_icon_click_toggles_favorite_on">Clicking station icon adds or removes this as favorite</string>
    <string name="settings_icon_click_toggles_favorite_off">Clicking station icon starts playing</string>
    <string name="settings_alarm">Alarm</string>
    <string name="settings_alarm_external">Open external</string>
    <string name="settings_alarm_external_desc">Open the alarm with default external app</string>
    <string name="settings_alarm_audio_player">Audio player</string>
    <string name="settings_alarm_sleep_timer">Sleep timer</string>
    <string name="settings_alarm_sleep_timer_desc">Stop playing after %1$s minutes</string>
    <string name="settings_play">Player</string>
    <string name="settings_play_external">Open external</string>
    <string name="settings_play_external_desc">Should a single click on stations open external</string>
    <string name="settings_equalizer">Equalizer</string>
    <string name="settings_connectivity">Connectivity</string>
    <string name="settings_connect_timeout">Stream connection timeout</string>
    <string name="settings_read_timeout">Stream read timeout</string>
    <string name="settings_retry_timeout">Stream retry timeout</string>
    <string name="settings_retry_delay">Reconnects delay</string>
    <string name="settings_seconds_format">%d seconds</string>
    <string name="settings_milliseconds_format">%d milliseconds</string>
    <string name="settings_warn_no_wifi">Warn when not on Wifi</string>
    <string name="settings_warn_no_wifi_on">Warn when playing without Wifi connection</string>
    <string name="settings_warn_no_wifi_off">No warning when not on Wifi connection</string>
    <string name="settings_recordings">Recordings</string>
    <string name="settings_record_name_formatting">Name formatting</string>
    <string name="settings_record_name_formatting_default" translatable="false">${station}_${artist}_${track}_${date}_${time}</string>
    <string name="settings_record_name_formatting_1" translatable="false">${station}_${artist}_${track}</string>
    <string name="settings_record_name_formatting_2" translatable="false">${station}_${date}_${time}</string>
    <string name="settings_record_name_formatting_3" translatable="false">${index}_${station}_${date}</string>
    <string name="settings_record_name_formatting_default_display">station_artist_track_\u200bdate_\u200btime</string>
    <string name="settings_record_name_formatting_1_display">station_artist_\u200btrack</string>
    <string name="settings_record_name_formatting_2_display">station_date_\u200btime</string>
    <string name="settings_record_name_formatting_3_display">index_station_\u200bdate</string>
    <string name="notify_pre_play">Connecting</string>
    <string name="notify_play">Playing</string>
    <string name="notify_paused">Paused</string>
    <string name="notify_starred">Station has been bookmarked as favorite</string>
    <string name="notify_autostarred">Station has been automatically bookmarked as favorite</string>
    <string name="notify_unstarred">Station has been removed from the favorite list</string>
    <string name="notify_deleted_favorites">The favorites have been deleted.</string>
    <string name="notify_deleted_history">The history has been deleted.</string>
    <string name="notify_station_removed_from_list">1 Removed</string>
    <string name="action_station_removed_from_list_undo">UNDO</string>
    <string name="alert_delete_history">Do you really want to delete the history?</string>
    <string name="alert_delete_favorites">Do you really want to delete all favorites?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alert_select_mpd_server">Which server?</string>
    <string name="alert_select_mpd_server_name">Server name</string>
    <string name="alert_select_mpd_server_hostname">Hostname</string>
    <string name="alert_select_mpd_server_port">Port</string>
    <string name="alert_select_mpd_server_add">Add</string>
    <string name="alert_select_mpd_server_save">Save</string>
    <string name="alert_select_mpd_server_remove">Remove</string>
    <string name="alert_add_or_edit_mpd_server">Enter details about a server</string>
    <string name="alert_press_back_to_exit">Press back once more to exit</string>
    <string name="error_stream_url">Stream url problem</string>
    <string name="error_caching_stream">Stream caching problem</string>
    <string name="error_play_stream">Unable to play stream</string>
    <string name="error_stream_reconnect_timeout">Unable to reconnect to the stream: timeout.</string>
    <string name="error_record_needs_write">Need write permission for recording!</string>
    <string name="error_grant_audiofocus">Request for audio focus was not granted by the system.</string>
    <string name="error_no_equalizer_found">No equalizer app found!</string>
    <string name="player_info_status">Status:&#160;</string>
    <string name="player_info_status_stopped">stopped</string>
    <string name="player_info_status_playing">playing</string>
    <string name="player_info_status_recording">recording</string>
    <string name="player_info_status_playing_and_recording">playing and recording</string>
    <string name="player_info_transferred">Transferred data: %1$s</string>
    <string name="player_info_recording_to">Recording to:\n%1$s</string>
    <string name="player_info_recorded_to">Last recording:\n%1$s</string>
    <string name="station_detail_bitrate">%1$1d kbps</string>
    <string name="station_detail_broken">BROKEN</string>
    <string name="image_button_disable">Disable</string>
    <string name="image_button_record">Record</string>
    <string name="image_button_delete">Delete</string>
    <string name="image_button_more">More</string>
    <string name="media_route_menu_title">GoogleCast</string>
    <string name="app_id">5A97BAE4</string>
    <string name="settings_mpd">Music Player Daemon</string>
    <string name="settings_view_mpd_servers">Your servers</string>
    <string name="action_mpd_nok">MPD not connected</string>
    <string name="action_mpd_ok">MPD connected</string>
    <string name="action_mpd_connected">Connected to server: %1$s</string>
    <string name="settings_radiobrowser_servers">RadioBrowser servers</string>
    <string name="settings_radiobrowser_servers_default">www.radio-browser.info/webservice</string>
    <string name="settings_other">Other</string>
    <string name="settings_statistics">Statistics</string>
    <string name="settings_about">About RadioDroid</string>
    <string-array name="weekdays">
        <item>S</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
    </string-array>
    <string name="settings_mpd_port">MPD port</string>
</resources>