<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/settings_general">

        <CheckBoxPreference
            android:key="show_broken"
            android:summaryOff="@string/settings_show_broken_off"
            android:summaryOn="@string/settings_show_broken_on"
            android:title="@string/settings_show_broken" />

        <CheckBoxPreference
            android:key="starred_at_startup"
            android:summaryOff="@string/settings_starred_at_startup_off"
            android:summaryOn="@string/settings_starred_at_startup_on"
            android:title="@string/settings_starred_at_startup" />

        <CheckBoxPreference
            android:key="load_icons"
            android:title="@string/settings_load_icons"
            android:summaryOn="@string/settings_load_icons_on"
            android:summaryOff="@string/settings_load_icons_off" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_play">

        <CheckBoxPreference
            android:key="play_external"
            android:summary="@string/settings_play_external_desc"
            android:title="@string/settings_play_external" />

        <CheckBoxPreference
            android:key="warn_no_wifi"
            android:summaryOff="@string/settings_warn_no_wifi_off"
            android:summaryOn="@string/settings_warn_no_wifi_on"
            android:title="@string/settings_warn_no_wifi" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_alarm">

        <CheckBoxPreference
            android:disableDependentsState="true"
            android:key="alarm_external"
            android:title="@string/settings_alarm_external"
            android:summary="@string/settings_alarm_external_desc" />

        <Preference
            android:key="shareapp_package"
            android:enabled="false"
            android:title="@string/settings_alarm_audio_player" />

        <ListPreference
            android:defaultValue="10"
            android:dependency="alarm_external"
            android:entries="@array/timeout_minutes"
            android:entryValues="@array/timeout_minutes_values"
            android:key="alarm_timeout"
            android:summary="@string/settings_alarm_sleep_timer_desc"
            android:title="@string/settings_alarm_sleep_timer" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_mpd">
        <EditTextPreference
            android:title="@string/settings_mpd_hostname"
            android:key="mpd_hostname" />
        <EditTextPreference
            android:title="@string/settings_mpd_port"
            android:key="mpd_port"
            android:defaultValue="6600"/>
    </PreferenceCategory>
</PreferenceScreen>