<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
<<<<<<< HEAD
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="0.70"
            android:background="?attr/colorPrimary"
            android:elevation="6dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <TextView
            android:id="@+id/detail_status"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <LinearLayout
            android:id="@+id/LinearLayoutPlaying"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.05"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/detail_station_name_value"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewLiveInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="?attr/actionModeSplitBackground"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewCountdown"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <ImageView
                android:id="@+id/imageViewIcon"
                android:layout_width="match_parent"
                android:layout_height="211dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="0dp"
                android:src="@drawable/ic_layer_status" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <!--<ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonAddTimeout"
                android:layout_gravity="center"
                android:minHeight="20dp"
                android:minWidth="30dp"
                android:src="@drawable/ic_add_alarm_black_24dp"
                android:layout_margin="10dp"
                android:layout_weight="1" />-->

                <ImageButton
                    android:id="@+id/buttonCancelCountdown"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/image_button_disable"
                    android:minHeight="20dp"
                    android:minWidth="50dp"
                    android:src="@drawable/ic_delete_black_24dp" />

                <ImageButton
                    android:id="@+id/buttonStop"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="48dp"
                    android:layout_height="44dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/detail_stop"
                    android:minHeight="20dp"
                    android:minWidth="100dp"
                    android:src="@drawable/ic_stop_24dp" />

                <ImageButton
                    android:id="@+id/buttonRecord"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/image_button_record"
                    android:minHeight="20dp"
                    android:minWidth="50dp"
                    android:src="@drawable/ic_fiber_manual_record_black_24dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewExtraStreamInfo"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.87"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"
                tools:ignore="NestedWeights" />


        </LinearLayout>

    </LinearLayout>
=======
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
>

    <View android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:background="?attr/colorPlayerShadow"/>

    <RelativeLayout
            android:id="@+id/RelativeLayout2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPlayerBackground"
            android:layout_marginTop="1dp">

        <TextView
                android:id="@+id/textViewRecordingInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="12sp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toLeftOf="@id/buttonRecordings"
                android:layout_alignParentLeft="true"
                android:textStyle="italic"
                android:textColor="@color/textColorSecondary"
                android:scrollHorizontally="false"
                android:ellipsize="none"
                android:maxLines="3"
                tools:text="Last recording\n20200220_Dance.fm - Something from Someone"/>

        <ImageButton
                android:id="@+id/buttonRecordings"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/ic_list_24dp"
                android:tint="?attr/colorAccent"
                android:layout_toLeftOf="@+id/buttonRecord"/>

        <ImageButton
                android:id="@+id/buttonRecord"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/image_button_record"
                app:srcCompat="@drawable/ic_start_recording"
                android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="?attr/colorPlayerBackground"
            android:layout_marginTop="1dp">

        <ImageView
                android:id="@+id/playerRadioImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                tools:src="@drawable/flag_nl"/>

        <ImageView
                android:id="@+id/transparentCircle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:tint="?attr/colorPlayerBackground"
                app:srcCompat="@drawable/ic_transparent_circle"
                android:visibility="gone"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_toRightOf="@id/playerRadioImage"
                android:layout_toLeftOf="@id/textViewTransferredBytes"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

            <TextView
                    android:id="@+id/detail_station_name_value"
                    tools:text="Dance.fm - the best radio station"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorAccent"
                    android:gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:lines="1"/>

            <TextView
                    android:id="@+id/textViewLiveInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:textColor="@color/textColorSecondary"
                    android:gravity="top"
                    android:layout_weight="0.5"
                    android:lines="1"
                    android:visibility="gone"
                    tools:text="Eminem - Solder"/>

        </LinearLayout>

        <TextView
                android:id="@+id/textViewTransferredBytes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="italic"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/textColorSecondary"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/buttonPause"
                tools:text="4MB"/>

        <ImageButton
                android:id="@+id/buttonPause"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/detail_play"
                app:srcCompat="@drawable/ic_play_circle"/>

        <TextView
                android:id="@+id/textViewExtraStreamInfo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textStyle="italic"
                android:visibility="gone"/>


    </RelativeLayout>

>>>>>>> segler-alex/master
</RelativeLayout>
